# optical-simulation-for-Veto-counter-segment

./: README.md
BVH2/JJ_withfiber/: CMakeLists.txt  run.mac  vis.mac
BVH2/JJ_withfiber/Histogram/: sipm_output.root  처음10000개.root
BVH2/JJ_withfiber/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SiPMSD.hh  SiPMSensitiveDetector.hh  SteppingAction.hh
BVH2/JJ_withfiber/macros/: run.mac
BVH2/JJ_withfiber/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Main.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SiPMSensitiveDetector.cc  SteppingAction.cc
